Additions to the documentation
Humanoid Controller is almost complete.

--- a/2D Controller/Documentation.html
+++ b/2D Controller/Documentation.html
@@ -16,7 +16,7 @@
             <ul>
                 <li id="active-nav-link"><a href="Documentation.html">Overview</a></li>
                 <li><a href="HTML/getting-started.html">Getting Started</a></li>
-                <li><a href="HTML/locomotion-controller.html">Locomotion Controller</a></li>
+                <li><a href="HTML/locomotion-controller.html">Locomotion System</a></li>
                 <li><a href="HTML/combat-system.html">Combat System</a></li>
                 <li><a href="HTML/CLASSES/classes.html">Classes</a></li>
             </ul>
