--- a/2D Controller/HTML/CLASSES/classes.html
+++ b/2D Controller/HTML/CLASSES/classes.html
@@ -16,7 +16,7 @@
             <ul>
                 <li><a href="../../Documentation.html">Overview</a></li>
                 <li><a href="../../HTML/getting-started.html">Getting Started</a></li>
-                <li><a href="../../HTML/locomotion-controller.html">Locomotion Controller</a></li>
+                <li><a href="../../HTML/locomotion-controller.html">Locomotion System</a></li>
                 <li><a href="../../HTML/combat-system.html">Combat System</a></li>
                 <li id="active-nav-link"><a href="../../HTML/CLASSES/classes.html">Classes</a></li>
             </ul>
@@ -25,17 +25,58 @@
 
     <div class="main-page-division">
         <div class="table-division">
-            <span class="table-title">Locomotion Controller</span>
+            <span class="table-title">Locomotion System</span>
             <table>
                 <tr>
-                    <td>HumanoidController</td>
+                    <td class="label-classes">HumanoidController</td>
+                    <td class="description-manual"><a class="redirect-link" href="#">Manual</a></td>
+                    <td class="description-scripting"><a class="redirect-link" href="SCRIPTING/HUMANOID-CONTROLLER/humanoid-controller.html">Scripting</a></td>
+                </tr>
+                <tr>
+                    <td class="label-classes">CharacterMovement</td>
+                    <td class="description-manual"><a class="redirect-link" href="#">Manual</a></td>
+                    <td class="description-scripting"><a class="redirect-link" href="#">Scripting</a></td>
+                </tr>
+                <tr>
+                    <td class="label-classes">CharacterSlide</td>
+                    <td class="description-manual"><a class="redirect-link" href="#">Manual</a></td>
+                    <td class="description-scripting"><a class="redirect-link" href="#">Scripting</a></td>
+                </tr>
+                <tr>
+                    <td class="label-classes">CharacterLedgeGrab</td>
+                    <td class="description-manual"><a class="redirect-link" href="#">Manual</a></td>
+                    <td class="description-scripting"><a class="redirect-link" href="#">Scripting</a></td>
+                </tr>
+                <tr>
+                    <td class="label-classes">CharacterDash</td>
+                    <td class="description-manual"><a class="redirect-link" href="#">Manual</a></td>
+                    <td class="description-scripting"><a class="redirect-link" href="#">Scripting</a></td>
+                </tr>
+            </table>
+        </div>
+
+        <div class="table-division">
+            <span class="table-title">Combat System</span>
+            <table>
+                <tr>
+                    <td class="label">CharacterCombat</td>
                     <td><a class="redirect-link" href="#">Manual</a></td>
                     <td><a class="redirect-link" href="SCRIPTING/HUMANOID-CONTROLLER/humanoid-controller.html">Scripting</a></td>
                 </tr>
                 <tr>
-                    <td>CharacterMovement</td>
-                    <td><a class="redirect-link" href="#">Manual</a></td>
-                    <td><a class="redirect-link" href="#">Scripting</a></td>
+                    <td class="label-classes">AttackSO</td>
+                    <td class="description-manual"><a class="redirect-link" href="#">Manual</a></td>
+                    <td class="description-scripting"><a class="redirect-link" href="#">Scripting</a></td>
+                </tr>
+                <tr>
+                    <td class="label-classes">CombatSystemProjectile</td>
+                    <td class="description-manual"><a class="redirect-link" href="#">Manual</a></td>
+                    <td class="description-scripting"><a class="redirect-link" href="#">Scripting</a></td>
+                </tr>
+                <tr>
+                    <td class="label-classes">EntityHealth</td>
+                    <td class="description-manual"><a class="redirect-link" href="#">Manual</a></td>
+                    <td class="description-scripting"><a class="redirect-link" href="#">Scripting</a></td>
                 </tr>
             </table>
         </div>
