--- a/2D Controller/HTML/combat-system.html
+++ b/2D Controller/HTML/combat-system.html
@@ -16,7 +16,7 @@
             <ul>
                 <li><a href="../Documentation.html">Overview</a></li>
                 <li><a href="getting-started.html">Getting Started</a></li>
-                <li><a href="locomotion-controller.html">Locomotion Controller</a></li>
+                <li><a href="locomotion-controller.html">Locomotion System</a></li>
                 <li id="active-nav-link"><a href="combat-system.html">Combat System</a></li>
                 <li><a href="CLASSES/classes.html">Classes</a></li>
             </ul>
