--- a/2D Controller/HTML/CLASSES/SCRIPTING/HUMANOID-CONTROLLER/try-jumping.html
+++ b/2D Controller/HTML/CLASSES/SCRIPTING/HUMANOID-CONTROLLER/try-jumping.html
@@ -17,7 +17,7 @@
             <ul>
                 <li><a href="../../../../Documentation.html">Overview</a></li>
                 <li><a href="../../../getting-started.html">Getting Started</a></li>
-                <li><a href="../../../locomotion-controller.html">Locomotion Controller</a></li>
+                <li><a href="../../../locomotion-controller.html">Locomotion System</a></li>
                 <li><a href="../../../combat-system.html">Combat System</a></li>
                 <li id="active-nav-link"><a href="../../classes.html">Classes</a></li>
             </ul>
@@ -58,44 +58,47 @@
             Here's an example of calling <b>TryJumping();</b> to prompt your character to attempt a jump, utilizing the default behavior checks:
         </p>
 
-        <div class="code-block">
-            using UnityEngine; <br> <br>
-            public class Example : <a class="redirect-link" href="humanoid-controller.html">HumanoidController</a> <br>
-            &lbrace; <br>
-            <span style="margin-left: 25px">protected override void <a class="redirect-link" href="https://docs.unity3d.com/ScriptReference/MonoBehaviour.Update.html">Update</a>()</span> <br>
-            <span style="margin-left: 25px;">&lbrace;</span> <br>
-            <span style="margin-left: 50px">base.Update();</span> <br> <br>
-            <span style="margin-left: 50px">if (<a class="redirect-link" href="https://docs.unity3d.com/ScriptReference/Input.GetKeyDown.html">Input.GetKeyDown</a>(<a class="redirect-link" href="https://docs.unity3d.com/ScriptReference/KeyCode.html">KeyCode.Space</a>))</span> <br>
-            <span style="margin-left: 50px;">&lbrace;</span> <br>
-            <span style="margin-left: 75px;">TryJumping();</span> <br>
-            <span style="margin-left: 50px;">&rbrace;</span> <br>
-            <span style="margin-left: 25px">&rbrace;</span>
-            <span><br>&rbrace;</span>
-        </div>
-        
-        <br>
+<pre class="code-block">
+using UnityEngine; <br> <br>
+public class Example : <a class="redirect-link" href="humanoid-controller.html">HumanoidController</a>
+{
+    protected override void <a class="redirect-link" href="https://docs.unity3d.com/ScriptReference/MonoBehaviour.Update.html">Update</a>()
+    {
+        base.Update();
 
+        if (<a class="redirect-link" href="https://docs.unity3d.com/ScriptReference/Input.GetKeyDown.html">Input.GetKeyDown</a>(<a class="redirect-link" href="https://docs.unity3d.com/ScriptReference/KeyCode.html">KeyCode.Space</a>))
+        {
+                TryJumping();
+        }
+    }
+}
+</pre>
+
+        <br>
         <p>
             If you wish to tailor the jump behavior for additional restrictions, as mentioned above, manual customization is required. Here's an example of adjusting the function call to ensure it does not cancel
             any ongoing attacks: (Note that '<b>characterCombat</b>' is a protected property of the <a class="redirect-link" href="humanoid-controller.html">HumanoidController</a>, enabling its
             use without the need to reference it explicitly in your script.)
         </p>
-        <div class="code-block">
-            using UnityEngine; <br> <br>
-            public class Example : <a class="redirect-link" href="humanoid-controller.html">HumanoidController</a> <br>
-            &lbrace; <br>
-            <span style="margin-left: 25px">protected override void <a class="redirect-link" href="https://docs.unity3d.com/ScriptReference/MonoBehaviour.Update.html">Update</a>()</span> <br>
-            <span style="margin-left: 25px;">&lbrace;</span> <br>
-            <span style="margin-left: 50px">base.Update();</span> <br> <br>
-            <span style="margin-left: 50px">if (<a class="redirect-link" href="https://docs.unity3d.com/ScriptReference/Input.GetKeyDown.html">Input.GetKeyDown</a>(<a class="redirect-link" href="https://docs.unity3d.com/ScriptReference/KeyCode.html">KeyCode.Space</a>))</span> <br>
-            <span style="margin-left: 50px;">&lbrace;</span> <br>
-            <span style="margin-left: 75px;">if (!characterCombat.IsAttacking)</span> <br>
-            <span style="margin-left: 75px;">&lbrace;</span> <br>
-            <span style="margin-left: 100px;">TryJumping();</span> <br>
-            <span style="margin-left: 75px;">&rbrace;</span> <br>
-            <span style="margin-left: 50px;">&rbrace;</span> <br>
-            <span style="margin-left: 25px">&rbrace;</span>
-            <span><br>&rbrace;</span>
-        </div>
+
+<pre class="code-block">
+using UnityEngine; <br> <br>
+public class Example : <a class="redirect-link" href="humanoid-controller.html">HumanoidController</a>
+{
+    protected override void <a class="redirect-link" href="https://docs.unity3d.com/ScriptReference/MonoBehaviour.Update.html">Update</a>()
+    {
+        base.Update();
+
+        if (<a class="redirect-link" href="https://docs.unity3d.com/ScriptReference/Input.GetKeyDown.html">Input.GetKeyDown</a>(<a class="redirect-link" href="https://docs.unity3d.com/ScriptReference/KeyCode.html">KeyCode.Space</a>))
+        {
+            if (!characterCombat.IsAttacking)
+            {
+                TryJumping();
+            }
+        }
+    }
+}
+</pre>
+
     </div>
 </body>
