--- a/2D Controller/HTML/locomotion-controller.html
+++ b/2D Controller/HTML/locomotion-controller.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Locomotion Controller</title>
+    <title>Locomotion System</title>
 
     <link rel="stylesheet" href="../CSS/scroll-bar.css">
     <link rel="stylesheet" href="../CSS/general.css">
@@ -16,7 +16,7 @@
             <ul>
                 <li><a href="../Documentation.html">Overview</a></li>
                 <li><a href="getting-started.html">Getting Started</a></li>
-                <li id="active-nav-link"><a href="locomotion-controller.html">Locomotion Controller</a></li>
+                <li id="active-nav-link"><a href="locomotion-controller.html">Locomotion System</a></li>
                 <li><a href="combat-system.html">Combat System</a></li>
                 <li><a href="CLASSES/classes.html">Classes</a></li>
             </ul>
@@ -24,6 +24,6 @@
     </header>
 
     <div class="main-page-division">
-        <h1>This is the Locomotion Controller page</h1>
+        <h1>This is the Locomotion System page</h1>
     </div>
 </body>
