--- a/2D Controller/HTML/CLASSES/classes.html
+++ b/2D Controller/HTML/CLASSES/classes.html
@@ -11,17 +11,7 @@
     <link rel="stylesheet" href="../../CSS/table.css">
 </head>
 <body>
-    <header class="nav-bar">
-        <div class="navbar-links">
-            <ul>
-                <li><a href="../../Documentation.html">Overview</a></li>
-                <li><a href="../../HTML/getting-started.html">Getting Started</a></li>
-                <li><a href="../../HTML/locomotion-controller.html">Locomotion System</a></li>
-                <li><a href="../../HTML/combat-system.html">Combat System</a></li>
-                <li id="active-nav-link"><a href="../../HTML/CLASSES/classes.html">Classes</a></li>
-            </ul>
-        </div>
-    </header>
+    <iframe src="../navigation-bar.html"></iframe>
 
     <div class="main-page-division">
         <div class="table-division">
