--- a/2D Controller/HTML/getting-started.html
+++ b/2D Controller/HTML/getting-started.html
@@ -11,17 +11,7 @@
     <link rel="stylesheet" href="../CSS/navigation-bar.css">
 </head>
 <body>
-    <header class="nav-bar">
-        <div class="navbar-links">
-            <ul>
-                <li><a href="../Documentation.html">Overview</a></li>
-                <li id="active-nav-link"><a href="getting-started.html">Getting Started</a></li>
-                <li><a href="locomotion-controller.html">Locomotion System</a></li>
-                <li><a href="combat-system.html">Combat System</a></li>
-                <li><a href="CLASSES/classes.html">Classes</a></li>
-            </ul>
-        </div>
-    </header>
+    <iframe src="navigation-bar.html"></iframe>
 
     <div class="main-page-division">
         <h1>This is the Getting Started page</h1>
