--- a/2D Controller/Documentation.html
+++ b/2D Controller/Documentation.html
@@ -11,17 +11,7 @@
     <link rel="stylesheet" href="CSS/navigation-bar.css">
 </head>
 <body>
-    <header class="nav-bar">
-        <div class="navbar-links">
-            <ul>
-                <li id="active-nav-link"><a href="Documentation.html">Overview</a></li>
-                <li><a href="HTML/getting-started.html">Getting Started</a></li>
-                <li><a href="HTML/locomotion-controller.html">Locomotion System</a></li>
-                <li><a href="HTML/combat-system.html">Combat System</a></li>
-                <li><a href="HTML/CLASSES/classes.html">Classes</a></li>
-            </ul>
-        </div>
-    </header>
+    <iframe id="myIframe" src="HTML/navigation-bar.html"></iframe>
 
     <div class="main-page-division">
         <h3>Welcome to '2D Complete Character Controller,' a powerful Unity asset that simplifies the integration of advanced character mechanics and combat
