--- a/2D Controller/HTML/CLASSES/SCRIPTING/HUMANOID-CONTROLLER/flip-character.html
+++ b/2D Controller/HTML/CLASSES/SCRIPTING/HUMANOID-CONTROLLER/flip-character.html
@@ -3,47 +3,46 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WallSlide</title>
+    <title>ChangeHorizontalVelocity</title>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" href="../../../../CSS/navigation-bar.css">
+    <link rel="stylesheet" href="../../../../CSS/scroll-bar.css">
     <link rel="stylesheet" href="../../../../CSS/general.css">
     <link rel="stylesheet" href="../../../../CSS/table.css">
     <link rel="stylesheet" href="../../../../CSS/code-block.css">
-    <link rel="stylesheet" href="../../../../CSS/scroll-bar.css">
+    <link rel="stylesheet" href="../../../../CSS/navigation-bar.css">
 </head>
 <body>
     <iframe src="../../../navigation-bar.html"></iframe>
 
     <div class="main-page-division">
         <p>
-            <h1>WallSlide</h1>
+            <h1>FlipCharacter</h1>
             <h2>Declaration</h2>
-            <p>protected void <b>WallSlide</b>(bool <b>canWallSlide</b> = true);</p> <br>
-            <h2>Description</h2>
-            Handles the logic for wall sliding, based on the given condition.
+            <p>protected void <b>FlipCharacter</b>(float <b>directionX</b>);</p>
         </p>
         <br>
         <div class="table-division">
             <span class="table-title">Parameters</span>
             <table>
                 <tr>
-                    <td class="label"><b>canWallSlide</b></td>
-                    <td class="description">Condition for when the wall slide should be initiated, when near a wall</td>
+                    <td class="label"><b>directionX</b></td>
+                    <td class="description">The direction the character should face.</td>
                 </tr>
             </table>
         </div>
         <br>
         <p>
-            When your character is positioned on a wall, its ability to slide is determined by the conditions specified in the function. If the function
-            is called without parameters, the character will automatically initiate a slide on that wall. The speed at which your character decelerates
-            during the slide can be controlled by configuring the settings of the '<a class="redirect-link" href="#">CharacterSlide</a>' component.
+            <h2>Description</h2>
+            Reorients the character to face the specified horizontal direction.
             <br> <br>
-            In this example, the player needs to maintain a continuous run toward the wall for the function to be executed:
+            This function adjusts the character's Euler angles on the Y-axis based on the provided direction, ensuring that the character faces the specified orientation.
         </p>
+        <br>
+        <p>Here is an example of how you can use this function within your custom controller script:</p>
 
 <pre class="code-block">
 using UnityEngine;
@@ -55,10 +54,7 @@ public class Example : <a class="redirect-link" href="humanoid-controller.html">
         base.Update();
 
         float horizontalInput = <a class="redirect-link" href="https://docs.unity3d.com/ScriptReference/Input.GetAxis.html">Input.GetAxis</a>("Horizontal");
-        float moveDirection = <a class="redirect-link" href="https://docs.unity3d.com/ScriptReference/Transform-right.html">transform.right</a>.x;
-        bool canWallSlide = horizontalInput * moveDirection > 0;
-
-        WallSlide(canWallSlide);
+        FlipCharacter(horizontalInput);
     }
 }
 </pre>
