--- a/2D Controller/HTML/CLASSES/SCRIPTING/HUMANOID-CONTROLLER/humanoid-controller.html
+++ b/2D Controller/HTML/CLASSES/SCRIPTING/HUMANOID-CONTROLLER/humanoid-controller.html
@@ -16,24 +16,14 @@
     <link rel="stylesheet" href="../../../../CSS/scroll-bar.css">
 </head>
 <body>
-    <header class="nav-bar">
-        <div class="navbar-links">
-            <ul>
-                <li><a href="../../../../Documentation.html">Overview</a></li>
-                <li><a href="../../../getting-started.html">Getting Started</a></li>
-                <li><a href="../../../locomotion-controller.html">Locomotion System</a></li>
-                <li><a href="../../../combat-system.html">Combat System</a></li>
-                <li id="active-nav-link"><a href="../../classes.html">Classes</a></li>
-            </ul>
-        </div>
-    </header>
+    <iframe src="../../../navigation-bar.html"></iframe>
 
     <div class="main-page-division">
         <h1>Humanoid Controller</h1>
         
         <p>
             <h2>Dependencies</h2>
-            <p><b style="text-decoration: underline;">Required</b> Components: <a class="redirect-link" href="#">CharacterMovement</a>, <a class="redirect-link" href="#">CharacterEnvironmentalQuery</a>, <a class="redirect-link" href="#">Rigidbody2D</a></p>
+            <p><b style="text-decoration: underline;">Required</b> Components: <a class="redirect-link" href="#">CharacterMovement</a>, <a class="redirect-link" href="#">CharacterEnvironmentalQuery</a>, <a class="redirect-link" href="https://docs.unity3d.com/ScriptReference/Rigidbody.html">Rigidbody2D</a></p>
             <p><span>Optional</span> Components: <a class="redirect-link" href="#">CharacterSlide</a>, <a class="redirect-link" href="#">CharacterDash</a>, <a class="redirect-link" href="#">CharacterLedgeGrab</a>, <a class="redirect-link" href="#">CharacterCombat</a></p>
         </p>
         <br>
@@ -147,6 +137,10 @@
         <div class="table-division">
             <span class="table-title">Public Methods</span>
             <table>
+                <tr>
+                    <td class="label"><a class="public-methods" href="flip-character.html">FlipCharacter</a></td>
+                    <td>Reorients the character to face the specified horizontal direction.</td>
+                </tr>
                 <tr>
                     <td class="label"><a class="public-methods" href="change-horizontal-velocity.html">ChangeHorizontalVelocity</a></td>
                     <td>Changes the character's horizontal velocity based on the provided direction.</td>
