--- a/2D Controller/HTML/CLASSES/SCRIPTING/HUMANOID-CONTROLLER/ledge-grab.html
+++ b/2D Controller/HTML/CLASSES/SCRIPTING/HUMANOID-CONTROLLER/ledge-grab.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LedgeGrab</title>
 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="../../../../CSS/navigation-bar.css">
     <link rel="stylesheet" href="../../../../CSS/general.css">
     <link rel="stylesheet" href="../../../../CSS/table.css">
@@ -12,17 +16,7 @@
     <link rel="stylesheet" href="../../../../CSS/scroll-bar.css">
 </head>
 <body>
-    <header class="nav-bar">
-        <div class="navbar-links">
-            <ul>
-                <li><a href="../../../../Documentation.html">Overview</a></li>
-                <li><a href="../../../getting-started.html">Getting Started</a></li>
-                <li><a href="../../../locomotion-controller.html">Locomotion System</a></li>
-                <li><a href="../../../combat-system.html">Combat System</a></li>
-                <li id="active-nav-link"><a href="../../classes.html">Classes</a></li>
-            </ul>
-        </div>
-    </header>
+    <iframe src="../../../navigation-bar.html"></iframe>
 
     <div class="main-page-division">
         <p>
@@ -41,7 +35,7 @@
                 </tr>
             </table>
         </div>
-        
+        <br>
         <h2>Description</h2>
         <p>
             Handles the logic for ledge grabbing, allowing customization of conditions.
