--- a/2D Controller/HTML/CLASSES/SCRIPTING/HUMANOID-CONTROLLER/try-dashing.html
+++ b/2D Controller/HTML/CLASSES/SCRIPTING/HUMANOID-CONTROLLER/try-dashing.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TryDashing</title>
 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="../../../../CSS/navigation-bar.css">
     <link rel="stylesheet" href="../../../../CSS/general.css">
     <link rel="stylesheet" href="../../../../CSS/table.css">
@@ -12,35 +16,25 @@
     <link rel="stylesheet" href="../../../../CSS/scroll-bar.css">
 </head>
 <body>
-    <header class="nav-bar">
-        <div class="navbar-links">
-            <ul>
-                <li><a href="../../../../Documentation.html">Overview</a></li>
-                <li><a href="../../../getting-started.html">Getting Started</a></li>
-                <li><a href="../../../locomotion-controller.html">Locomotion System</a></li>
-                <li><a href="../../../combat-system.html">Combat System</a></li>
-                <li id="active-nav-link"><a href="../../classes.html">Classes</a></li>
-            </ul>
-        </div>
-    </header>
+    <iframe src="../../../navigation-bar.html"></iframe>
 
     <div class="main-page-division">
         <p>
             <h1>TryDashing</h1>
             <h2>Declaration</h2>
         </p>
-            <p>protected void <b>TryDashing();</b></p> <br>
-            
+            <p>protected void <b>TryDashing();</b></p>
+            <br>
             <h2>Description</h2>
             <p>
                 Attempts to make the character perform a dash based on certain conditions.
                 <br> <br>
                 When the designated key for dashing is pressed, the controller will endeavor to make your character dash. You have control over when the dash is initiated
                 through the '<b>dashCooldown</b>' and '<b>minimumDashDistance</b>' properties in the inspector of the controller. Tweak these properties to tailor the dash
-                experience to your preferences. For a deeper level of customization, delve into the settings of the '<a class="redirect-link" href="#">CharacterDash</a>'
+                experience to your preferences. For a deeper level of customization, dive into the settings of the '<a class="redirect-link" href="#">CharacterDash</a>'
                 component to fine-tune the intricacies of the dash mechanic.
                 <br> <br>
-                Here is a basic example on how you can implement the dash mechanic into your custom controller:
+                Here is a basic example on how you can implement the dash mechanic into your custom controller script:
             </p>
 
 <pre class="code-block">
