--- a/2D Controller/HTML/CLASSES/SCRIPTING/HUMANOID-CONTROLLER/try-floor-slide.html
+++ b/2D Controller/HTML/CLASSES/SCRIPTING/HUMANOID-CONTROLLER/try-floor-slide.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TryFloorSlide</title>
 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="../../../../CSS/navigation-bar.css">
     <link rel="stylesheet" href="../../../../CSS/general.css">
     <link rel="stylesheet" href="../../../../CSS/table.css">
@@ -12,23 +16,13 @@
     <link rel="stylesheet" href="../../../../CSS/scroll-bar.css">
 </head>
 <body>
-    <header class="nav-bar">
-        <div class="navbar-links">
-            <ul>
-                <li><a href="../../../../Documentation.html">Overview</a></li>
-                <li><a href="../../../getting-started.html">Getting Started</a></li>
-                <li><a href="../../../locomotion-controller.html">Locomotion System</a></li>
-                <li><a href="../../../combat-system.html">Combat System</a></li>
-                <li id="active-nav-link"><a href="../../classes.html">Classes</a></li>
-            </ul>
-        </div>
-    </header>
+    <iframe src="../../../navigation-bar.html"></iframe>
 
     <div class="main-page-division">
         <h1>TryFloorSlide</h1>
         <h2>Declaration</h2>
-        <p>protected void <b>TryFloorSlide</b>(bool <b>inputHold</b>);</p> <br>
-
+        <p>protected void <b>TryFloorSlide</b>(bool <b>inputHold</b>);</p>
+        <br>
         <div class="table-division">
             <span class="table-title">Parameters</span>
             <table>
@@ -38,7 +32,7 @@
                 </tr>
             </table>
         </div>
-        
+        <br>
         <h2>Description</h2>
         <p>
             Handles the logic for initiating and exiting floor sliding.
@@ -51,7 +45,7 @@
             </li>
             <br>
             <li>
-                Additionally, contingent on the settings of the '<a class="redirect-link" href="#">CharacterFloorSlide</a>' component, the character may experience a reduction
+                Additionally, contingent on the settings of the '<a class="redirect-link" href="#">CharacterSlide</a>' component, the character may experience a reduction
                 in speed during the floor slide. In such instances, if the character's speed drops below the specified value, the floor slide will automatically halt.
             </li>
             <br>
@@ -61,7 +55,7 @@
             </li>
         </ul>
         <p>
-            This example demonstrates how you can use the '<b>TryFloorSlide</b>' function within your custom script.
+            This example demonstrates how you can use the function within your custom controller script:
         </p>
         
 <pre class="code-block">
