--- a/2D Controller/HTML/CLASSES/SCRIPTING/HUMANOID-CONTROLLER/try-jumping.html
+++ b/2D Controller/HTML/CLASSES/SCRIPTING/HUMANOID-CONTROLLER/try-jumping.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TryJumping</title>
 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="../../../../CSS/navigation-bar.css">
     <link rel="stylesheet" href="../../../../CSS/general.css">
     <link rel="stylesheet" href="../../../../CSS/table.css">
@@ -12,30 +16,21 @@
     <link rel="stylesheet" href="../../../../CSS/scroll-bar.css">
 </head>
 <body>
-    <header class="nav-bar">
-        <div class="navbar-links">
-            <ul>
-                <li><a href="../../../../Documentation.html">Overview</a></li>
-                <li><a href="../../../getting-started.html">Getting Started</a></li>
-                <li><a href="../../../locomotion-controller.html">Locomotion System</a></li>
-                <li><a href="../../../combat-system.html">Combat System</a></li>
-                <li id="active-nav-link"><a href="../../classes.html">Classes</a></li>
-            </ul>
-        </div>
-    </header>
+    <iframe src="../../../navigation-bar.html"></iframe>
 
     <div class="main-page-division">
         <p>
             <h1>TryJumping</h1>
             <h2>Declaration</h2>
-            <p>protected void <b>TryJumping</b>();</p> <br>
+            <p>protected void <b>TryJumping</b>();</p>
+            <br>
             <h2>Description</h2>
             Attempts to make the character jump based on certain conditions. <br>
             <ul>
                 <li>
                     When the designated jump key is pressed, a series of checks are conducted to ensure the feasibility of initiating a jump. These checks encompass factors such as 
                     the remaining air jumps, which their value can be assigned in the inspector of the controller (<b>numberOfAirJumps</b>), and considerations regarding the setup
-                    of Ledge Grab and/or Ledge Climb mechanics. For instance, if the jump key is pressed while your character is ledge grabbing, the system evaluates the percentage
+                    of the ledge grab mechanic. For instance, if the jump key is pressed while your character '<b>IsLedgeGrabbing</b>', the system evaluates the percentage
                     of the played ledge grab animation before permitting the jump. Said evaluation is based on the '<b>ledgeJumpThreshold</b>' value, set in the inspector of the 
                     controller as well.
                 </li>
@@ -55,11 +50,12 @@
         </p>
         <br>
         <p>
-            Here's an example of calling <b>TryJumping();</b> to prompt your character to attempt a jump, utilizing the default behavior checks:
+            Here's an example of calling the function to prompt your character to attempt a jump, utilizing the default behavior checks:
         </p>
 
 <pre class="code-block">
-using UnityEngine; <br> <br>
+using UnityEngine;
+
 public class Example : <a class="redirect-link" href="humanoid-controller.html">HumanoidController</a>
 {
     protected override void <a class="redirect-link" href="https://docs.unity3d.com/ScriptReference/MonoBehaviour.Update.html">Update</a>()
@@ -68,7 +64,7 @@ public class Example : <a class="redirect-link" href="humanoid-controller.html">
 
         if (<a class="redirect-link" href="https://docs.unity3d.com/ScriptReference/Input.GetKeyDown.html">Input.GetKeyDown</a>(<a class="redirect-link" href="https://docs.unity3d.com/ScriptReference/KeyCode.html">KeyCode.Space</a>))
         {
-                TryJumping();
+            TryJumping();
         }
     }
 }
@@ -82,7 +78,8 @@ public class Example : <a class="redirect-link" href="humanoid-controller.html">
         </p>
 
 <pre class="code-block">
-using UnityEngine; <br> <br>
+using UnityEngine;
+
 public class Example : <a class="redirect-link" href="humanoid-controller.html">HumanoidController</a>
 {
     protected override void <a class="redirect-link" href="https://docs.unity3d.com/ScriptReference/MonoBehaviour.Update.html">Update</a>()
